--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,21 @@
+annotated-doc==0.0.2
+annotated-types==0.7.0
+anyio==4.11.0
 certifi==2025.10.5
 charset-normalizer==3.4.3
+click==8.3.0
 coverage==7.10.7
 dnspython==2.8.0
+fastapi==0.120.0
+h11==0.16.0
 idna==3.10
 iniconfig==2.3.0
 numpy==2.3.3
 packaging==25.0
 pandas==2.3.3
 pluggy==1.6.0
+pydantic==2.12.3
+pydantic_core==2.41.4
 Pygments==2.19.2
 pymongo==4.15.3
 pytest==8.4.2
@@ -16,5 +24,10 @@ python-dateutil==2.9.0.post0
 pytz==2025.2
 requests==2.32.5
 six==1.17.0
+sniffio==1.3.1
+starlette==0.48.0
+typing-inspection==0.4.2
+typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
+uvicorn==0.38.0
