--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ annotated-types==0.7.0
 anyio==4.11.0
 certifi==2025.10.5
 charset-normalizer==3.1.0
-click==8.3.0
+click
 coverage==7.10.7
 cryptography==43.0.3
 dnspython==2.8.0
