--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
 
   healthcare_app:
     build:
-      context: .                
+      context: .
       dockerfile: docker/Dockerfile
     container_name: healthcare_app
     depends_on:
@@ -25,8 +25,8 @@ services:
     command: ["python3", "main.py"]
     volumes:
       - ./app:/app
-      - csv_data:/app/csv_output   
+      - ./app/csv_output:/app/csv_output   
+      - mongo_data:/data/db  
 
 volumes:
-  mongo_data:       
-  csv_data:         
+  mongo_data:   
