--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,7 @@ services:
     command: ["python3", "main.py"]
     volumes:
       - ./app:/app
-      - ./app/csv_output:/app/csv_output   
-      - mongo_data:/data/db  
+      - ./data:/app/csv_output   
 
 volumes:
-  mongo_data:   
+  mongo_data:
